# japanese-addresses

./: .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonpackage.yml  update.yml
awesome_package/: __init__.py
japanese-address/: __init__.py
japanese_address/: __init__.py
japanese_addresses/: __init__.py  prefecture2city.pkl  prefecture2city2street.pkl
scripts/: csv_to_dict.py
tests/: __init__.py  test_address.py
