[build-system]
requires = ["poetry>=1.0.0",]
build-backend = "poetry.masonry.api"

[tool.poetry]
version = "0.0.1"
name = "japanese-address"
authors = [ "wakame <hotwater1367@gmail.com>",]
description = ""
readme = "README.md"
license = "MIT"
homepage = ""
repository = "https://github.com/wakamezake/japanese-address.git"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.black]
line-length = 79
