[flake8]
doctests = True
max-complexity = 10

[metadata]
author = wakame
description = A template for Python packages
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
name = awesome-package

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
include_package_data = True
install_requires = numpy
packages = find:
python_requires = >=3.5

[options.packages.find]
exclude = tests

[pydocstyle]
convention = numpy

[tool:pytest]
addopts =
  --black
  --cov=./
  --cov-report=xml
  --doctest-modules
  --flake8
  --mypy
  --pydocstyle
